// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2rem;
  width: 2rem;
  position: relative;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

<div
  class="c0"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot with badge 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2rem;
  width: 2rem;
  position: relative;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0:after {
  display: block;
  content: "";
  position: absolute;
  top: -0.2rem;
  right: -0.3rem;
  height: 0.8rem;
  width: 0.8rem;
  border-radius: 50%;
  background-color: #6d9bbc;
}

<div
  class="c0"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;
